# Student-Study-Group-Event-Manager

./: CMakeLists.txt  LICENSE  README.md  eventmanager.cpp  eventmanager.h  filehandler.cpp  filehandler.h  groupmanager.cpp  groupmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  studentmanager.cpp  studentmanager.h  taskmanager.cpp  taskmanager.h
